--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,2 +1,21 @@
-<h1>Main#home</h1>
-<p>Find me in app/views/main/home.html.erb</p>
+<!DOCTYPE html> 
+<html> 
+<head> 
+	<title>My Page</title> 
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+</head> 
+<body>
+	<div data-roll="page">
+		<div data-role="header"> <h1>Header Shit</h1> </div>
+		<div data-role="content"> <p>Here's some content, nigga.</p> </div>
+		<div data-role="footer"  data-type="horizontal">
+			<a href="main/get" data-role="button">Get</a>
+			<a href="main/send" data-role="button">Send</a>
+			<a href="main/help" data-role="button">Help</a>
+		</div>
+	</div>
+</body>
+
