--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -3,7 +3,106 @@
 <head> 
 	<title>My Page</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<%= stylesheet_link_tag 'home.css' %>
+	
+	<style>
+	body
+{
+	background: url(/images/retro_intro.png) repeat;
+	margin: 0px;
+	width: 100%;
+	height: 100%;
+}
+#page1
+{
+	top: 0;
+	left: 0; 
+	width:100%; 
+	min-height:100%; 
+	position:absolute;
+	margin: 0px;
+} 
+#container
+{
+	top: 0;
+	left:0;
+	width:100%;
+	min-height: 100%;
+	position: absolute;
+	margin:0px;
+}
+#header
+{
+	top: 0;
+	left:0;
+	width:100%;
+	height:10%;
+	background-color: black;
+	margin:0px;
+	position: absolute;
+	opacity: 0.6;
+	-webkit-box-shadow: 0 8px 10px -6px black;
+	-moz-box-shadow: 0 8px 10px -6px black;
+	box-shadow: 0 8px 10px -6px black;
+}
+#header > h1
+{
+	text-align: center;
+	color: white;
+}
+#footer 
+{
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 10%;
+	background-color: black;
+	position: absolute;
+	opacity: 0.6;
+
+}
+#home
+{
+	left: 10%;
+
+}
+#get
+{
+	left: 30%;
+}
+.nav_button
+{
+	position:absolute;
+	width: 33.33%;
+	margin: 0px;
+	height: 100%;
+	bottom: 0px;
+}
+.nav_button > h3
+{
+	text-align: center;
+	color: white;
+	bottom: 33.33%;
+}
+#homeDiv
+{
+	left:0%;
+	border-right-style: solid;
+	border-right-width: 2px;
+	border-right-color: white;
+}
+#sendDiv
+{
+	left:33.33%;
+	border-right-style: solid;
+	border-right-width: 2px;
+	border-right-color: white;
+}
+#getDiv
+{
+	left:66.66%;
+}
+body {top: 0; left: 0; width: 100%; min-height: 100%; position: absolute; margin: 0px;}
+</style>
 </head>
 <body>
 	<div id="container">
