--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -12,22 +12,12 @@
 	width: 100%;
 	height: 100%;
 }
-#page1
-{
-	top: 0;
-	left: 0; 
-	width:100%; 
-	min-height:100%; 
-	position:absolute;
-	margin: 0px;
-} 
 #container
 {
 	top: 0;
 	left:0;
 	width:100%;
 	min-height: 100%;
-	position: absolute;
 	margin:0px;
 }
 #header
@@ -38,8 +28,7 @@
 	height:10%;
 	background-color: black;
 	margin:0px;
-	position: absolute;
-	opacity: 0.6;
+	opacity: 0.5;
 	-webkit-box-shadow: 0 8px 10px -6px black;
 	-moz-box-shadow: 0 8px 10px -6px black;
 	box-shadow: 0 8px 10px -6px black;
@@ -48,30 +37,27 @@
 {
 	text-align: center;
 	color: white;
+	font-size: 80%;
+}
+#content 
+{
+	top: 10%;
+	left:0;
+	width:100%;
+	min-height: 80%;
+	margin:0px;
 }
 #footer 
 {
-	bottom: 0;
+	bottom: 0%;
 	left: 0;
 	width: 100%;
 	height: 10%;
 	background-color: black;
-	position: absolute;
-	opacity: 0.6;
-
-}
-#home
-{
-	left: 10%;
-
-}
-#get
-{
-	left: 30%;
+	opacity: 0.5;
 }
 .nav_button
 {
-	position:absolute;
 	width: 33.33%;
 	margin: 0px;
 	height: 100%;
@@ -81,7 +67,7 @@
 {
 	text-align: center;
 	color: white;
-	bottom: 33.33%;
+	font-size: 80%;
 }
 #homeDiv
 {
@@ -101,7 +87,7 @@
 {
 	left:66.66%;
 }
-body {top: 0; left: 0; width: 100%; min-height: 100%; position: absolute; margin: 0px;}
+body {top: 0; left: 0; width: 100%; min-height: 100%; margin: 0px;}
 </style>
 </head>
 <body>
