Edited some of the text for clarity

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -135,7 +135,7 @@ body {width: 100%; min-height: 100%; margin: 0px;}
 			</a>
 			<a href="/users">
 				<div class ="nav_button" id="sendDiv">
-					<h3 id="send"> Send </h3>
+					<h3 id="send"> Select and Send </h3>
 				</div>
 			</a>
 		</div>
