--- a/app/views/main/pinch.html.erb
+++ b/app/views/main/pinch.html.erb
@@ -119,7 +119,7 @@ body {width: 100%; min-height: 100%; margin: 0px;}
 		</div>
 		<div id="contentHolder">
 			<div id="content">
-				Welcome to Pinch. You are now in the Pinch page. All pinchable images from your library will appear here. Select an image and pinch away!
+				You are now in the Pinch page. All pinchable images from your library will appear here. Select an image and pinch away!
 			</div> 
 		</div>
 		<div id="footer">
@@ -133,9 +133,9 @@ body {width: 100%; min-height: 100%; margin: 0px;}
 					<h3 id="get"> Back </h3>
 				</div>
 			</a>
-			<a href="/pinch">
+			<a href="/receive">
 				<div class ="nav_button" id="sendDiv">
-					<h3 id="send"> Pinch </h3>
+					<h3 id="send"> Get </h3>
 				</div>
 			</a>
 		</div>
