--- a/app/views/main/receive.html.erb
+++ b/app/views/main/receive.html.erb
@@ -119,7 +119,7 @@ body {width: 100%; min-height: 100%; margin: 0px;}
 		</div>
 		<div id="contentHolder">
 			<div id="content">
-				Welcome to Pinch. You are now in the Receive page. Once your friend has picked up their image, he can drop it anywhere here. 
+				You are now in the Receive page. Once your friend has picked up their image, they can drop it anywhere here. 
 			</div>
 		</div>
 		<div id="footer">
