--- a/app/views/main/users.html.erb
+++ b/app/views/main/users.html.erb
@@ -119,7 +119,7 @@ body {width: 100%; min-height: 100%; margin: 0px;}
 		</div>
 		<div id="contentHolder">
 			<div id="content">
-				Welcome to Pinch. You are now in the User page. All pinchable users will appear here. 
+				You are now in the User page. All pinchable users will appear here. Select the user that you wish to send an image to and proceed to pinch your images of choice.  
 			</div>
 		</div>
 		<div id="footer">
@@ -135,7 +135,7 @@ body {width: 100%; min-height: 100%; margin: 0px;}
 			</a>
 			<a href="/pinch">
 				<div class ="nav_button" id="sendDiv">
-					<h3 id="send"> Pinch </h3>
+					<h3 id="send"> Pinch Away!</h3>
 				</div>
 			</a>
 		</div>
