--- a/app/views/main/pinch.html.erb
+++ b/app/views/main/pinch.html.erb
@@ -108,7 +108,11 @@
 	float: left;
 	margin:0px;
 }
-
+a
+{
+	text-decoration: none;
+	color: #000000;
+}
 body {width: 100%; min-height: 100%; margin: 0px;}
 </style>
 </head>
