Testing out input tag

--- a/app/views/main/users.html.erb
+++ b/app/views/main/users.html.erb
@@ -140,7 +140,8 @@ body {width: 100%; min-height: 100%; margin: 0px;}
 			<a href="/pinch">
 				<div class ="nav_button" id="sendDiv">
 					<h3 id="send"> Pinch Away!</h3>
-				</div>
+				    <input type="file" name="image">
+                </div>
 			</a>
 		</div>
 	</div>
