--- a/app/views/main/users.html.erb
+++ b/app/views/main/users.html.erb
@@ -140,6 +140,7 @@ body {width: 100%; min-height: 100%; margin: 0px;}
         	{
             	var img = document.createElement("img");
             	img.src = window.URL.createObjectURL(files[0]);
+            	img.height = 60;
             	img.onload = function(e) {
                 	window.URL.revokeObjectURL(this.src);
             	}
