Added some server connection commentary

--- a/app/views/main/receive.html.erb
+++ b/app/views/main/receive.html.erb
@@ -115,6 +115,10 @@ a
 }
 body {width: 100%; min-height: 100%; margin: 0px;}
 </style>
+<script>
+	// Timed loop: check server for data. When data exists, pull and store but do not display. Store most recent image only.
+	//	This can all be stored in html5 local storage. 
+</script>
 </head>
 <body>
 	<div id="container">
