--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,149 +1,185 @@
 <!DOCTYPE html> 
-<html> 
-<head> 
-	<title>My Page</title> 
+<html>
+
+<head>
+	<title>Pinchapp</title>
+	<meta charset="utf-8">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+ 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+
+	<link rel="stylesheet" href="jquery.mobile-1.2.0.css" />
+
+	<link rel="stylesheet" href="style.css" />
+	<link rel="apple-touch-icon" href="appicon.png" />
+	<link rel="apple-touch-startup-image" href="upstart.png">
 	
-	<style>
-	body
-{
-	background: url(/images/retro_intro.png) repeat;
-	margin: 0px;
-	width: 100%;
-	height: 100%;
-}
-#container
-{
-	float: left;
-	width:100%;
-	min-height: 100%;
-	margin:0px;
-	position: relative;
-}
-#header
-{
-	position: relative;
-	float:left;
-	width:100%;
-	background-color: black;
-	margin:0px;
-	opacity: 0.5;
-	-webkit-box-shadow: 0 8px 10px -6px black;
-	-moz-box-shadow: 0 8px 10px -6px black;
-	box-shadow: 0 8px 10px -6px black;
-}
-#header > h1
-{
-	text-align: center;
-	color: white;
-	font-size: 80%;
-}
-#contentHolder
-{
-	float: left;
-	width:100%;
-	min-height: 100%;
-	margin:0px;
-	position: absolute;
-	display:-webkit-box;
-	-webkit-box-pack:center;
-	-webkit-box-align:center;
+	<script src="jquery-1.8.2.min.js"></script>
+	<script src="jquery.mobile-1.2.0.js"></script>
+    <script>
+    window.URL = window.URL || window.webkitURL;
+    $(document).ready(function() {
 
-}
-#content 
-{
-	background-color: black;
-	opacity: 0.5;
-	-webkit-box-shadow: 0 8px 10px -6px black;
-	-moz-box-shadow: 0 8px 10px -6px black;
-	box-shadow: 0 8px 10px -6px black;
-	color: white;
-	position: relative;
-	float:left;
-	width:40%;
-	margin: 4em;
-	padding: 1em;
-	text-align: center;
-	font-size: 70%;
-}
-#footer 
-{	
-	position: absolute;
-	bottom:0px;
-	background-color: black;
-	opacity: 0.5;
-	margin: 0px;
-	min-height: 3em;
-}
-.nav_button
-{
-	width: 33.33%;
-	min-height: 3em;
-	margin: 0px;
-}
-.nav_button > h3
-{
-	text-align: center;
-	color: white;
-	font-size: 80%;
-}
-#homeDiv
-{
-	float: left;
-	border-right-style: solid;
-	border-right-width: 2px;
-	border-right-color: white;
-	margin:0px;
-}
-#sendDiv
-{
-	float: left;
-	border-right-style: solid;
-	border-right-width: 2px;
-	border-right-color: white;
-	margin:0px;
-}
-#getDiv
-{
-	float: left;
-	margin:0px;
-}
-a
-{
-	text-decoration: none;
-	color: #000000;
-}
+        var imageSelect = document.getElementById("imageSelect");
+            fileSelect = document.getElementById("beer");
+    
+        fileSelect.addEventListener("click", function (e) 
+        {
+            if (imageSelect)
+            {
+                imageSelect.click(); 
+            }
+            e.preventDefault();
+        }, false);
+    
+    });
+        function handleFiles(files)
+        {
+            console.log(files.length);
+            if (files.length)
+            {
+                var img = document.createElement("img");
+                img.src = window.URL.createObjectURL(files[0]);
+                //Post object url to server here//
+                img.height = 480;
 
-body {width: 100%; min-height: 100%; margin: 0px;}
-</style>
-</head>
-<body>
-	<div id="container">
-		<div id="header">
-			<h1>Pinch</h1>
-		</div>
-		<div id="contentHolder">
-			<div id="content">
-				Welcome to Pinch. Select "Send" to pinch content to a friend or "Get" to receive content.
-			</div>
-		</div>
-		<div id="footer">
-			<a href="/">
-				<div class="nav_button" id="homeDiv">
-					<h3 id="home"> Home </h3>
-				</div>
-			</a>
-			<a href="/receive">
-				<div class="nav_button" id="getDiv">
-					<h3 id="get"> Get </h3>
-				</div>
-			</a>
-			<a href="/users">
-				<div class ="nav_button" id="sendDiv">
-					<h3 id="send"> Select and Send </h3>
-				</div>
-			</a>
+                var content = document.getElementById("send");
+                //content.innerHTML = "";  
+                content.appendChild(img); 
+                //content.style.opacity='1.0';
+            }    
+        } 
+</script> 
+</head> 
+
+<!-- Start of first page: #one -->
+<div data-role="page" id="one">
+
+	<div data-role="header">
+	  <h1>Pinch</h1>
+	</div><!-- /header -->
+
+	<div data-role="content">	
+		<h2>Welcome </h2>
+		
+		<p>This is the pinch app.</p>
+		<p><a href="#log" data-role="button">Login </a></p>
+		<p><a href="#register" data-role="button">Register</a></p>
+	</div><!-- /content -->
+	
+	<div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
+		<div data-role="navbar" class="nav-glyphish-example" data-grid="c">
+		<ul>
+                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="get.php" id="key" data-icon="custom">Receive</a></li>
+                <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
+                <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
+                <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
+		</ul>
 		</div>
 	</div>
+</div>
+
+</div><!-- /page one -->
+
+
+<!-- Start of login page: #login -->
+
+<div data-role="page"id="log">
+
+    <div data-role="header">
+        <h1>Pinch</h1>
+    </div><!-- /header -->
+
+    <div data-role="content">
+      <h2> Log in</h>
+      <p> Please enter your username and password </p>
+         <div data-role="fieldcontain" class="ui-hide-label">
+
+        <form action="index.php" method="post">
+	<input type="text" name="username" placeholder="Username"/><br>
+	<input type="password" name="password"placeholder="Password"/> <br>
+        <input type="submit" value="Login"/>
+        </div>
+    </div><!-- /content -->
+
+    <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
+        <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
+            <ul>
+                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="get.php" id="key" data-icon="custom">Receive</a></li>
+                <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
+                <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
+                <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+</div><!-- / login -->
+
+
+<!-- Start of login page: #register -->
+
+<div data-role="page"id="register">
+
+    <div data-role="header">
+        <h1>Pinch</h1>
+    </div><!-- /header -->
+
+    <div data-role="content">
+       <h2> Registration</h2>
+
+      <p> New to Pinch App? Register Below</p>
+         <div data-role="fieldcontain" class="ui-hide-label">
+	   <form action="index.php" method="post">
+	   <input type="text" name="username" placeholder="Username"/><br>
+	   <input type="password" name="password"placeholder="Password"/> <br>
+	   <input type="password" name="retypePassword" placeholder="Reenter Password"/> <br>
+	   <input type="submit" value="Register"/>
+	   </form>
+        </div>
+    </div><!-- /content -->
+
+    <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
+        <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
+            <ul>
+                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="get.php" id="key" data-icon="custom" >Receive</a></li>
+                <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
+                <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
+                <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- Start of send page: #send -->
+
+<div data-role="page" id="send">
+
+    <div data-role="header">
+        <h1>Pinch</h1>
+    </div><!-- /header -->
+    <!--
+    <div data-role="content" id="selectedImage">
+       <h2> Registration</h2>
+
+      <p> New to Pinch App? Register Below</p>
+
+    </div><!-- /content -->
+
+    <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
+        <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
+            <ul>
+                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="get.php" id="key" data-icon="custom" >Receive</a></li>
+                <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
+                <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+</div><!-- / register page -->
 </body>
 </html>
