--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -9,13 +9,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 
 	<link rel="stylesheet" href="jquery.mobile-1.2.0.css" />
-
 	<link rel="stylesheet" href="style.css" />
 	<link rel="apple-touch-icon" href="appicon.png" />
 	<link rel="apple-touch-startup-image" href="upstart.png">
 	
 	<script src="jquery-1.8.2.min.js"></script>
 	<script src="jquery.mobile-1.2.0.js"></script>
+    <script src="hammer.js"></script>
+    <script src="jquery.hammer.js"></script>
+    <script src="myLogic.js"></script>
+
     <script>
     window.URL = window.URL || window.webkitURL;
     $(document).ready(function() {
@@ -48,7 +51,7 @@
                 content.appendChild(img); 
                 //content.style.opacity='1.0';
             }    
-        } 
+        }
 </script> 
 </head> 
 
@@ -158,16 +161,17 @@
 
 <div data-role="page" id="send">
 
-    <div data-role="header">
-        <h1>Pinch</h1>
+    <div data-role="header" id="output"><!-- added output here -->
+        <h1>Pinch</h1> 
     </div><!-- /header -->
-    <!--
-    <div data-role="content" id="selectedImage">
-       <h2> Registration</h2>
 
-      <p> New to Pinch App? Register Below</p>
-
-    </div><!-- /content -->
+   
+        <div id="zoom" class="zoomProps">
+            <div class="polaroid">
+                <img src="images/screen.jpg" alt="" width="200" height="200" />
+            </div>
+        </div>
+    
 
     <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
         <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
