added alert, lowered pinch threshold and removing image after pinch

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -169,6 +169,7 @@
         <div id="zoom" class="zoomProps">
             <div class="polaroid">
                 <img src="images/screen.jpg" alt="" width="200" height="200" />
+                <span> My pic </span>
             </div>
         </div>
     
