--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -74,7 +74,7 @@
 		<div data-role="navbar" class="nav-glyphish-example" data-grid="c">
 		<ul>
                 <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
-                <li><a href="get.php" id="key" data-icon="custom">Receive</a></li>
+                <li><a href="#get" id="key" data-icon="custom">Receive</a></li>
                 <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
                 <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
@@ -110,7 +110,7 @@
         <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
             <ul>
                 <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
-                <li><a href="get.php" id="key" data-icon="custom">Receive</a></li>
+                <li><a href="#get" id="key" data-icon="custom">Receive</a></li>
                 <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
                 <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
@@ -148,7 +148,7 @@
         <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
             <ul>
                 <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
-                <li><a href="get.php" id="key" data-icon="custom" >Receive</a></li>
+                <li><a href="#get" id="key" data-icon="custom" >Receive</a></li>
                 <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
                 <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
@@ -156,6 +156,33 @@
         </div>
     </div>
 </div>
+
+<!-- Start of send page: #send -->
+
+<div data-role="page" id="get">
+
+    <div data-role="header" id="getOutput"><!-- added output here -->
+        <h1>Pinch</h1> 
+    </div><!-- /header -->
+
+   
+        <div id="zoomGet" class="zoomProps">
+            <!--Location of drag and drop data-->
+        </div>
+    
+
+    <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
+        <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
+            <ul>
+                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="#get" id="key" data-icon="custom" >Receive</a></li>
+                <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
+                <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 
 <!-- Start of send page: #send -->
 
@@ -178,7 +205,7 @@
         <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
             <ul>
                 <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
-                <li><a href="get.php" id="key" data-icon="custom" >Receive</a></li>
+                <li><a href="#get" id="key" data-icon="custom" >Receive</a></li>
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
                 <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
             </ul>
