added pinch listener

--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,9 @@
   		src: url("IMIT.TTF");
   
 	}
-        #zoom {
-
+        #zoomGet{
+        	height: 100%;
+        	width: 100%;
           }
 		  
 		  .zoomProps{	  
