--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -165,10 +165,8 @@
         <h1>Pinch</h1> 
     </div><!-- /header -->
 
-   
-        <div id="zoomGet" class="zoomProps">
-            <!--Location of drag and drop data-->
-        </div>
+    <div id="listener" style="width:100%;height:100%;position:absolute;top:0;left:0;">
+    </div>
     
 
     <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
