--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -157,7 +157,7 @@
     </div>
 </div>
 
-<!-- Start of send page: #send -->
+<!-- Start of send page: #get -->
 
 <div data-role="page" id="get">
 
