--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -44,9 +44,9 @@
                 var img = document.createElement("img");
                 img.src = window.URL.createObjectURL(files[0]);
                 //Post object url to server here//
-                img.height = 480;
+                img.height = 200;
 
-                var content = document.getElementById("send");
+                var content = document.getElementById("polaroidSend");
                 //content.innerHTML = "";  
                 content.appendChild(img); 
                 //content.style.opacity='1.0';
@@ -73,7 +73,7 @@
 	<div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
 		<div data-role="navbar" class="nav-glyphish-example" data-grid="c">
 		<ul>
-                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="#one" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
                 <li><a href="#get" id="key" data-icon="custom">Receive</a></li>
                 <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
@@ -100,8 +100,8 @@
          <div data-role="fieldcontain" class="ui-hide-label">
 
         <form action="index.php" method="post">
-	<input type="text" name="username" placeholder="Username"/><br>
-	<input type="password" name="password"placeholder="Password"/> <br>
+	       <input type="text" name="username" placeholder="Username"/><br>
+	       <input type="password" name="password"placeholder="Password"/> <br>
         <input type="submit" value="Login"/>
         </div>
     </div><!-- /content -->
@@ -109,7 +109,7 @@
     <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
         <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
             <ul>
-                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="#one" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
                 <li><a href="#get" id="key" data-icon="custom">Receive</a></li>
                 <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
@@ -147,7 +147,7 @@
     <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
         <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
             <ul>
-                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="#one" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
                 <li><a href="#get" id="key" data-icon="custom" >Receive</a></li>
                 <input type="file" id="imageSelect" style="display:none" onchange="handleFiles(this.files)">
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
@@ -172,7 +172,7 @@
     <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
         <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
             <ul>
-                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="#one" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
                 <li><a href="#get" id="key" data-icon="custom" >Receive</a></li>
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
                 <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
@@ -192,8 +192,8 @@
 
    
         <div id="zoom" class="zoomProps">
-            <div class="polaroid">
-                <img src="images/screen.jpg" alt="" width="200" height="200" />
+            <div id="polaroidSend" class="polaroid">
+                <!--<img id="img" src="images/screen.jpg" alt="" width="200" height="200" />-->
                 <span> My pic </span>
             </div>
         </div>
@@ -202,7 +202,7 @@
     <div data-role="footer" data-id="samebar" class="nav-glyphish-example" data-position="fixed" data-tap-toggle="false">
         <div data-role="navbar" class="nav-glyphish-example" data-grid="c">
             <ul>
-                <li><a href="index.php" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
+                <li><a href="#one" id="home" data-icon="custom" class="ui-btn-active">Home</a></li>
                 <li><a href="#get" id="key" data-icon="custom" >Receive</a></li>
                 <li><a href="#send" id="beer" data-icon="custom">Send</a></li>
                 <li><a href="help.php" id="help" data-icon="custom">Help</a></li>
