added home page and select image functionality

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -45,7 +45,7 @@
                 img.src = window.URL.createObjectURL(files[0]);
                 //Post object url to server here//
                 img.height = 200;
-
+                img.width = 200;
                 var content = document.getElementById("polaroidSend");
                 //content.innerHTML = "";  
                 content.appendChild(img); 
